fix wrapping

--- a/courseProject.css
+++ b/courseProject.css
@@ -2,6 +2,7 @@ body{
     width: 100vw;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 .Title{
     width: 100%;
@@ -18,13 +19,14 @@ body{
 }
 
 .MainContent{
-    width: 70%;
-    height: 80vh;
+    display: inline-block;
+    width: 69%;
+    min-height: 80vh;
     border: 0.5vh dashed #356949;
     border-bottom-color:- #07b148 ;
     border-radius: 1rem;
 
-    margin: 1vw;
+    margin: 1vw 0vw 1vw 1vw;
 
     box-shadow: 0.5em 1em 0.5em 0em rgba(64, 73, 59, 0.281);
     overflow-y: scroll;
@@ -32,15 +34,15 @@ body{
 }
 
 
-.AsideContent{
+.AsideContent {
+    display: inline-block;
     width: 25%;
-    height: 80vh;
+    min-height: 80vh;
     border: 0.5vh dashed #356949;
-    border-bottom-color:- #07b148 ;
+    border-bottom-color:- #07b148;
     border-radius: 1rem;
 
-    margin: 1vw 0.5vw 1vw 0.5vw;
-
+    margin: 1vw 0vw 1vw 0.5vw;
     box-shadow: 0.5em 1em 0.5em 0em rgba(64, 73, 59, 0.281);
 }
 
@@ -64,7 +66,7 @@ body{
     border-bottom: 0.25vh solid black;
     background-color: transparent;
 
-     margin: 0vh 1vw 2vh 1vw;
+    margin: 0vh 1vw 2vh 1vw;
 }
 .Form label{
     margin-left: 1vw;
@@ -73,6 +75,7 @@ body{
 }
 
 #content{
+    width: 90%;
     margin: 0vh 1vw 2vh 1vw; 
 }
 
@@ -119,7 +122,7 @@ body{
 
 .customstate{
     width: 100%;
-    height: 20vh;
+    height: auto;
 
     margin: 2vh;
 }
@@ -171,6 +174,7 @@ body{
     width: 5vw;
     height: 3vh;
 }
+
 
 .archiveclass .customli{
     font-family: "PT sans", sans-serif;
